WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48813
REGRESSION (
r63622
): Link dns-prefetch doesn't work in non-http documents
https://bugs.webkit.org/show_bug.cgi?id=48813
Summary
REGRESSION (r63622): Link dns-prefetch doesn't work in non-http documents
Alexey Proskuryakov
Reported
2010-11-01 17:58:16 PDT
Scraping the document for hostnames to prefetch should be limited to HTTP documents. But <link rel="dns-prefetch"> should probably always work.
Attachments
proposed fix
(1.88 KB, patch)
2010-11-02 11:56 PDT
,
Alexey Proskuryakov
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Deirdre Saoirse Moen
Comment 1
2010-11-02 10:48:49 PDT
<
rdar://problem/8602552
>
Alexey Proskuryakov
Comment 2
2010-11-02 11:35:14 PDT
This is a regression from <
http://trac.webkit.org/changeset/63622
>.
Alexey Proskuryakov
Comment 3
2010-11-02 11:56:20 PDT
Created
attachment 72711
[details]
proposed fix
Alexey Proskuryakov
Comment 4
2010-11-02 13:34:56 PDT
Committed <
http://trac.webkit.org/changeset/71159
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug