        Reviewed by Timothy Hatcher.

https://bugs.webkit.org/show_bug.cgi?id=48813
        <rdar://problem/8602552> REGRESSION (r63622): DNS prefetching for <link> tags doesn't work
        in non-HTTP documents

        Cannot test DNS prefetching.

        * html/HTMLLinkElement.cpp: (WebCore::HTMLLinkElement::process): We should be looking at
        preferences, not at whether this document has prefetching enabled.



Canonical link: https://commits.webkit.org/61654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71159 268f45cc-cd09-0410-ab3c-d52691b4dbfc